fixed edge flickering by clamping percentage

--- a/style.css
+++ b/style.css
@@ -168,17 +168,6 @@ body {
 
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-#dots-area::after {
-  pointer-events: none;
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  width: 100%;
-  height: 100%;
-  background-color: red;
-}
 .dots-area-uploaded {
   opacity: 1 !important;
   pointer-events: all !important;
